# culture

./: .dockerignore  .gitignore  Dockerfile-Local  Makefile  README.md  TODO.md  change-log.md  docker-compose.local.yml  manage.py  mvp.md  other-shell-scripts.md  pyproject.toml
nginx/: default.conf
src/checklists/: admin.py  decorators.py  models.py  services.py  urls.py  utils.py  views.py
src/checklists/migrations/: 0001_initial.py  0002_alter_checklistcriteria_text_and_more.py  0002_initial.py  0003_alter_inspection_unique_together.py  0004_schedule.py  0005_schedule_is_swapped_swaplog.py
src/config/: celery.py  dev.py  settings.py  urls.py
src/templates/: base_admin.html
src/templates/checklists/: admin_cabinet.html  admin_dashboard.html  admin_history.html  admin_schedule.html  admin_templates.html  employee_dashboard.html  inspection_form.html  inspection_readonly.html  template_preview.html
src/templates/users/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  register.html
src/users/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
src/users/migrations/: 0001_initial.py  0002_alter_user_managers_alter_user_first_name_and_more.py  0003_alter_user_phone.py  0004_user_can_perform_inspections_userabsence.py
